--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@tippyjs/react": "^4.2.6",
+        "classnames": "^2.5.1",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
+        "tippy.js": "^6.3.7",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
         "babel-plugin-module-resolver": "^5.0.0",
         "customize-cra": "^1.0.0",
         "react-app-rewired": "^2.2.1",
-        "sass": "^1.75.0",
-        "@babel/plugin-proposal-private-property-in-object": "^7.16.0"
+        "sass": "^1.75.0"
     },
     "scripts": {
         "start": "react-app-rewired start",
