--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-brands-svg-icons": "^6.0.0",
-        "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/free-regular-svg-icons": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
@@ -15,6 +15,7 @@
         "classnames": "^2.5.1",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
+        "react-bootstrap": "^2.10.2",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
