--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
+        "axios": "^1.6.8",
         "classnames": "^2.5.1",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.2",
         "react-dom": "^18.2.0",
+        "react-lazyload": "^3.2.1",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
         "tippy.js": "^6.3.7",
